--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+
     <title><%= content_for(:title) || "Message Me" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
+   <%= favicon_link_tag %>
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -20,9 +23,20 @@
     <%# Includes all stylesheet files in app/assets/stylesheets %>
     <%= stylesheet_link_tag :app, "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <!-- Semantic UI CSS from CDN -->
+<!-- jQuery (Required for Semantic UI JS) -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<!-- Semantic UI CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
+
+<!-- Semantic UI JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+
   </head>
 
   <body>
+  <%= render '/layouts/navigation' %>
     <%= yield %>
   </body>
 </html>
