--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,5 +1,5 @@
   <div class="ui small inverted menu">
-  <a class="active item">
+  <a class="active item" href="home" >
     ChatRomm
   </a>
   <a class="item">
